--- a/hrweb.api/appsettings.json
+++ b/hrweb.api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "hrwebapi": "Data Source=.;Integrated Security=True;Database=hrwebdb"
+  }
 }
